[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.12"
regex = { git = "https://github.com/rust-lang/regex.git" }
ctrlc = "3.1.7"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
reqwest = "0.11.9"
lazy_static = "1.4.0"                                      # 延迟加载,statics that require code to be executed at runtime in order to be initialized.
bitmaps = "3.1.0"
chrono = "0.4"
